crates/normalize-surface-syntax/tests/snapshots/snapshots__lua_try_catch__try_catch_finally.snap
---
source: crates/normalize-surface-syntax/tests/snapshots.rs
expression: "emit(&Program\n{\n    body:\n    vec![Stmt::try_catch(Stmt::block(vec![Stmt::expr(Expr::call(Expr::ident(\"doSomething\"),\n    vec![]))]), Some(\"e\".into()),\n    Some(Stmt::block(vec![Stmt::expr(Expr::call(Expr::member(Expr::ident(\"console\"),\n    \"log\"), vec![Expr::ident(\"e\")]))])),\n    Some(Stmt::block(vec![Stmt::expr(Expr::call(Expr::ident(\"cleanup\"),\n    vec![]))])))]\n})"
---
local _ok, e = pcall(function()
  doSomething()
end)
if not _ok then
  console.log(e)
end
cleanup()
